-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.0
-
None
-
Linux x86_64; fedora 12; qt-qml from around april 6th compiled with gcc version Red Hat 4.4.3-4
-
fac110fd9313972f001bf8b52b0254cc2d67ef66
Running the following QML reveals a problem
import Qt 4.6
Rectangle {
width: 200
height: 200
Column{
Text
Text
{ text: "Hello World" font.pointSize: 400 } }
}
The problem is that the second text has its point size ignored. Instead, a warning is given that both point size and pixel size are set. This warning (and behaviour) should only happen when both pointSize and pixelSize are set on the same element, not on different elements in the same component.
If the first text is commented out, the pointSize on the second text is set correctly.