Fix setting of pointSize and pixelSize in different items. Also ensure warning is issued regardless of the order both pointSize and pixelSize are set in the same item.

Task-number: QTBUG-9665